--- a/public/styles.css
+++ b/public/styles.css
@@ -9,6 +9,7 @@ html {
 body {
   background: #eee;
   padding: 0 16px;
+  background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
 }
 
 header {
@@ -65,6 +66,7 @@ footer p {
   height: 36px;
   cursor: pointer;
   outline: none;
+  background-color: white;
 }
 
 form.create-note {
